# multi_output_viewer

./: Cargo.toml
src/: lib.rs  main.rs  state.rs  vte_actions.rs
src/snapshots/: multi_output_viewer__state__test__buffers_primary_bytes.snap  multi_output_viewer__state__test__clears_secondary_output.snap  multi_output_viewer__state__test__draws_secondary_output_after_content_and_restores_cursor_position.snap  multi_output_viewer__state__test__only_renders_primary_bytes_once.snap  multi_output_viewer__state__test__passes_through_bytes.snap  multi_output_viewer__state__test__primary_output__buffers_bytes.snap  multi_output_viewer__state__test__primary_output__clears_secondary_output.snap  multi_output_viewer__state__test__primary_output__draws_secondary_output_after_content_and_restores_cursor_position.snap  multi_output_viewer__state__test__primary_output__only_renders_bytes_once.snap  multi_output_viewer__state__test__primary_output__passes_through_bytes.snap  multi_output_viewer__state__test__secondary_output__changes_prefix_when_expanded.snap  multi_output_viewer__state__test__secondary_output__clamps_cursor_down.snap  multi_output_viewer__state__test__secondary_output__clamps_cursor_up.snap  multi_output_viewer__state__test__secondary_output__durations_change_at_same_time.snap  multi_output_viewer__state__test__secondary_output__handles_trailing_blank_lines.snap  multi_output_viewer__state__test__secondary_output__only_shows_most_recent_lines.snap  multi_output_viewer__state__test__secondary_output__removing_output_moves_selection_down.snap  (+5 more)
