[package]
name = "multi_output_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = "0.26"
log = "0.4"
portable-pty = "0.8"
simplelog = "0.12"
tokio = { version = "1", features = [ "full" ] }
vte = "0.11"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
